<resources>
    <string name="app_name">Tugas_Hp_Xioami</string>
    <string name="belom_di_isi">Xiaomi Note 3</string>
    <string name="deskripsi">Ponsel ini dapat dikatakan cukup menarik perhatian. Pasalnya, meski ditawarkan dengan spesifikasi yang tinggi, ia dibanderol dengan harga relatif terjangkau. Smartphone berbentang 5,5 inci ini sendiri bakal hadir dalam dua versi, yakni "Standar dan "High-End". Kedua perangkat itu memiliki bentuk yang identik, tetapi sedikit berbeda di bagian spesifikasinya.Berikut adalah Spesifikasi dari Xiaomi :</string>
    <string name="cpu">Qualcomm Snapdragon 835</string>
    <string name="layar">5.5 inchi Full HD HDR</string>
    <string name="ram">3GB</string>
    <string name="internal">32GB</string>
    <string name="os">Android 5.1 Lollipop</string>
    <string name="batre">4000 mAh</string>
    <string name="kamera">13MP/5MP</string>
    <string name="resolusi">4K</string>
    <string name="jaringan">2G/3G/4G</string>
    <string name="fitur">NFC, Bluetooth 5.0, Usb Type-C</string>
    <string name="kelebihan">microSD up to 256GB, Single SIM, Dual SIM Tipe : Nano SIM, WatterProof</string>
</resources>
